--- a/Shmarkets/src/main/resources/application.yml
+++ b/Shmarkets/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
    datasource:
       url: jdbc:mysql://127.0.0.1:3306/shmarket?characterEncoding=utf-8
       username: root
-      password: zatt
+      password: a
       driver-class-name: com.mysql.jdbc.Driver
       
    http:
@@ -16,21 +16,27 @@ spring:
          charset: UTF-8
          enabled: true
          
-   resources:
+   resource:
+      # web文件映射（数组）
       staticLocations:
-         - classpath:/static/
+         - classpath:/static
          - file:/d:/blog/
-      
-      
+   
+   # 邮件服务配置
    mail:
+      #邮箱服务器地址
       host: smtp.qq.com
-      username: 306529917@qq.com
-      password: ejchtkhuulwqcbbh
+      # 用户名
+      username: 864849403@qq.com
+      # 发送密码
+      password: uasvgffqwtkybdah
+      # 默认字符集编码
       default-encoding: UTF-8
-      
+
+# 邮件发送地址
 mail:
    fromMail:
-      assr: 306529917@qq.com
+      addr: 864849403@qq.com
 
 server:
    port: 80
@@ -40,4 +46,4 @@ server:
 logging:
    level:
       com:
-         yc: debug
+         yc: trace
